examples/expected/check_invalid_call_target.txt
error[E2005]: invalid call target: I64
  --> examples/invalid_call_target.tp:3:3
   |
 3 |   x(2);
   |   ^^^^
